infrastructure/kubernetes/argo/ingress/argo-stripprefix-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: argo-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /argo
